--- a/ToDoApp/style.css
+++ b/ToDoApp/style.css
@@ -51,6 +51,29 @@ button{
     color: #fff;
     font-size: 20px;
     cursor: pointer;
-    border-radius: 40px;
+    border-radius: 30px;
 
+}
+ul li{
+    list-style: none;
+    font-size: 18px;
+    padding: 20px 20px 20px 50px;
+    user-select: none;
+    cursor: pointer;
+}
+ul li.checked{
+    color: red;
+    text-decoration: line-through;
+
+}
+ul li span{
+    position: absolute;
+    right: 0;
+    top: 5px;
+    width: 40px;
+    height: 40px;
+    font-size: 20px;
+    color: red;
+    line-height: 40px;
+    text-align: center;
 }
